--- a/Notebook/Jupyter/path/KasagoDL2.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL2.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "### MINSTデータのロード\n",
-    "- load_mnist() のプロキシ設定I/Fは環境変数のみ。\n",
+    "- load_mnist() のプロキシ設定I/Fは[環境変数（HTTP(S)_PROXY）](PythonTraining.ipynb)のみ。\n",
     "- 他環境でエラーになる場合、./kasago/dataset/mnist.pklを削除。\n",
     "- [dataset/mnist.py](Kasago/dataset/mnist.py)"
    ]
@@ -1247,7 +1247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
