--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -11,6 +11,7 @@
     "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "  - [jupyter上で利用するとき](#jupyter上で利用するとき)\n",
     "- [表示](#表示)\n",
     "  - [基本的な図](#基本的な図)\n",
@@ -39,8 +40,7 @@
     "tags": []
    },
    "source": [
-    "## 環境準備\n",
-    "プロキシ環境の場合などについては、[コチラ](PythonTraining.ipynb)をご参照ください。"
+    "## 環境準備"
    ]
   },
   {
@@ -100,6 +100,28 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9a52eb8-5f70-4e68-8f26-f557b113d537",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "26a01b0f-f912-4c21-b3d4-3b75760c0be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
    ]
   },
   {
@@ -173,7 +195,7 @@
    "metadata": {},
    "source": [
     "##### 画像ファイルをダウンロードして保存\n",
-    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -183,11 +205,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/image/pukiwiki.png'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "with open('img1.jpg', 'wb') as saveFile : saveFile.write(res.content)"
