--- a/Notebook/Jupyter/path/PythonTraining.ipynb
+++ b/Notebook/Jupyter/path/PythonTraining.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
     "- [概要](#概要)\n",
+    "  - [環境変数設定](#環境変数設定)\n",
     "  - [コマンド実行](#コマンド実行)\n",
     "  - [インタラクティブ実行](#インタラクティブ実行)\n",
     "- [詳細](#詳細)\n",
@@ -46,11 +47,34 @@
    "id": "aea2ffe3-3e10-4287-bad3-fcd36099cee3",
    "metadata": {},
    "source": [
-    "#### プロキシ設定\n",
+    "#### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "971b2682-5749-4dc5-b24e-93240705f7cf",
+   "metadata": {},
+   "source": [
     "jupyter notebook、jupyter labコマンド実行前に、環境変数を設定しておくと良い。\n",
     "```sh\n",
     "export http_proxy=\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "export https_proxy=\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bda0ac53-feec-4492-b046-98c2d4e2c551",
+   "metadata": {},
+   "source": [
+    "例えば、以下のように環境変数を使用してプロキシ設定を行う。\n",
+    "```sh\n",
+    "# プロキシ設定\n",
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}\n",
     "```"
    ]
   },
@@ -80,6 +104,16 @@
    "outputs": [],
    "source": [
     "%env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b9ad27-6c6b-47c6-b538-66f11d13a497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!$PATH"
    ]
   },
   {
@@ -120,7 +154,7 @@
    "source": [
     "##### アップデート\n",
     "- 環境によっては、pythonではなくpython3と打つ必要あり。\n",
-    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](プロキシ設定)。"
+    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](#プロキシ設定)。"
    ]
   },
   {
@@ -130,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m pip install --upgrade pip #--proxy=\"http[s]://<user_name>:<password>@<proxy_host>:<proxy_port>/\""
+    "!python -m pip install --upgrade pip #--proxy=$HTTPS_PROXY"
    ]
   },
   {
@@ -140,7 +174,7 @@
    "source": [
     "##### パッケージのインストール\n",
     "- 環境によっては、pipではなくpip3と打つ必要あり。\n",
-    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](プロキシ設定)。"
+    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](#プロキシ設定)。"
    ]
   },
   {
@@ -159,7 +193,7 @@
    "outputs": [],
    "source": [
     "#!pip install <package>\n",
-    "!pip install pipdeptree #--proxy=\"http[s]://<user_name>:<password>@<proxy_host>:<proxy_port>/\""
+    "!pip install pipdeptree #--proxy=$HTTPS_PROXY"
    ]
   },
   {
@@ -177,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy #--proxy=\"http[s]://<user_name>:<password>@<proxy_host>:<proxy_port>/\""
+    "!pip install numpy #--proxy=$HTTPS_PROXY"
    ]
   },
   {
@@ -2004,14 +2038,6 @@
     "m.hello()\n",
     "m.goodbye()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afa3acd4-12dd-49e5-94b7-1b849b8c858d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2030,7 +2056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
