--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -13,6 +13,7 @@
     "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "- [共通的データ処理](#共通的データ処理)\n",
     "  - [生成](#生成)\n",
     "  - [加工](#加工)\n",
@@ -234,6 +235,28 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b5c3107-13d2-4489-a303-76b59c26a6fe",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b63ad63-def5-4593-a4de-69550307a47e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
    ]
   },
   {
@@ -532,7 +555,7 @@
    "metadata": {},
    "source": [
     "#### 以下の手順で使用するデータのロード（Webから\n",
-    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -542,11 +565,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='shift-jis', sep=\";\")\n",
@@ -1114,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
