--- a/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
@@ -12,6 +12,7 @@
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "  - [共通関数定義](#共通関数定義)\n",
     "- [モデル・アルゴリズム](#モデル・アルゴリズム)\n",
     "  - [単回帰分析](#単回帰分析)\n",
@@ -107,6 +108,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb6dd533-c622-4409-89fc-9e6d73eae563",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "24619bb6-3eac-4e69-90ab-3fe1b88a459c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "005888b0-d9f8-4a07-b310-69037b6bb14f",
    "metadata": {},
    "source": [
@@ -183,7 +206,7 @@
    "source": [
     "##### 生成\n",
     "- その日の最高気温と売れたアイスの個数のデータを利用。\n",
-    "- 必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "- 必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -193,11 +216,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=n_ice%2Bvs%2Btemp.xlsx&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_excel(io.BytesIO(res.content), engine='openpyxl')\n",
@@ -494,7 +512,7 @@
    "metadata": {},
    "source": [
     "###### ダウンロードしてDFに読込\n",
-    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -524,11 +542,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
@@ -939,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
