--- a/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
@@ -12,6 +12,7 @@
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "  - [共通関数定義](#共通関数定義)\n",
     "- [モデル・アルゴリズム](#モデル・アルゴリズム)\n",
     "  - [多項式回帰分析](#多項式回帰分析)\n",
@@ -105,6 +106,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5120543a-1a3f-4cbc-9860-a8e3951cd0fd",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbf5a8e-2a28-458e-878b-166d521067d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a364c318-dcde-4727-9fda-3354f08893f0",
    "metadata": {},
    "source": [
@@ -180,7 +203,7 @@
    "source": [
     "##### 生成・加工・理解\n",
     "- 重回帰の問題の解消のためなので、[重回帰](ScikitLearnTraining1.ipynb)と同じデータの生成・加工・理解を行う。\n",
-    "- 必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "- 必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -190,12 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
-    "url = 'https://raw.githubusercontent.com/vincentarelbundock/Rdatasets/master/csv/MASS/Boston.csv'\n",
+    "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
     "df = df.drop('Unnamed: 0',axis=1)\n",
