--- a/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
@@ -12,6 +12,7 @@
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "  - [共通関数定義](#共通関数定義)\n",
     "- [性能の評価](#性能の評価)\n",
     "  - [回帰問題](#回帰問題)\n",
@@ -109,6 +110,28 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24021ee1-91be-4ba3-9da8-3482e60c33e9",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e992d1bd-b584-49da-9eb8-26464b7ca731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
    ]
   },
   {
@@ -598,7 +621,9 @@
   {
    "cell_type": "markdown",
    "id": "55cbcfcd-1ba6-4c7a-b78f-95be6754bddc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "###### サポートベクターマシン分類器"
    ]
@@ -802,11 +827,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
@@ -1358,7 +1378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
