--- a/Notebook/Jupyter/path/ScikitLearnTraining7.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining7.ipynb
@@ -90,6 +90,20 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e87d3bf1-d608-46d1-bcda-bd757e024f5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -108,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
