--- a/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
@@ -13,6 +13,7 @@
     "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "- [共通処理](#共通処理)\n",
     "  - [モデルの生成](#モデルの生成)\n",
     "  - [勾配降下法アルゴリズムの選択](#勾配降下法アルゴリズムの選択)\n",
@@ -342,6 +343,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bd620cf-dd4a-4da0-b4c8-1de4d6f48f68",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "609f3dce-8d41-45f6-9436-788e0097bdda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "30e6ac99-5db3-4c85-b8bd-e089d77d0e72",
    "metadata": {},
    "source": [
@@ -597,11 +620,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
@@ -1027,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
