--- a/Notebook/Jupyter/path/PandasTraining.ipynb
+++ b/Notebook/Jupyter/path/PandasTraining.ipynb
@@ -11,6 +11,8 @@
     "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
+    "  - [warningを非表示](#warningを非表示)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "- [Series](#Series)\n",
     "  - [生成](#生成)\n",
     "  - [アクセス](#アクセス)\n",
@@ -37,8 +39,7 @@
     "tags": []
    },
    "source": [
-    "## 環境準備\n",
-    "プロキシ環境の場合などについては、[コチラ](PythonTraining.ipynb)をご参照ください。"
+    "## 環境準備"
    ]
   },
   {
@@ -88,6 +89,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2535dbd-9bbb-4566-9390-ef038f1a4dbf",
+   "metadata": {},
+   "source": [
+    "### warningを非表示"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "eb1bae98-ea9e-457a-9280-72bf616df14c",
@@ -96,6 +105,28 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea83305-543e-419d-be04-ab1179955b35",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "140255a2-d712-4a5c-9f8a-e5ec36ec6ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
    ]
   },
   {
@@ -485,7 +516,7 @@
    "metadata": {},
    "source": [
     "##### CSVファイルをダウンロードして...\n",
-    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -495,11 +526,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=temp.csv&refer=Pandas'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ"
    ]
@@ -579,7 +605,7 @@
    "metadata": {},
    "source": [
     "##### Excelファイルをダウンロードして...\n",
-    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
+    "必要に応じて[環境変数にプロキシ設定](#プロキシ設定)をしておくと良い。"
    ]
   },
   {
@@ -589,11 +615,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=temp.xlsx&refer=Pandas'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ"
    ]
@@ -601,7 +622,9 @@
   {
    "cell_type": "markdown",
    "id": "bfbb8a9d-0461-4ed5-8b64-a447c45a9b4e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "###### 直接、読み込む。"
    ]
@@ -611,9 +634,6 @@
    "execution_count": null,
    "id": "1a074a57-42db-4c0f-8f4e-730a7d75cb8f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2311,7 +2331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
