--- a/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
@@ -12,6 +12,7 @@
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
     "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
     "  - [共通関数](#共通関数)\n",
     "- [RNNアルゴリズム・モデル](#RNNアルゴリズム・モデル)\n",
     "  - [時系列予測](#時系列予測)\n",
@@ -82,6 +83,28 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df2012e5-b652-472e-a1f3-72592a2dc678",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcefb16d-bda7-4b46-8922-04cecece4af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "proxies = {\n",
+    "    \"http\": os.getenv(\"HTTP_PROXY\"),\n",
+    "    \"https\": os.getenv(\"HTTPS_PROXY\")\n",
+    "}"
    ]
   },
   {
@@ -189,11 +212,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proxies = { # プロキシ設定\n",
-    "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
-    "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "}\n",
-    "\n",
     "url = 'https://raw.githubusercontent.com/AileenNielsen/TimeSeriesAnalysisWithPython/master/data/AirPassengers.csv'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='shift-jis', sep=\",\")\n",
@@ -704,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
