--- a/Notebook/Jupyter/path/TensorFlowAndKeras3.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras3.ipynb
@@ -1288,6 +1288,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import ssl\n",
+    "#ssl._create_default_https_context = ssl._create_unverified_context\n",
     "from keras.datasets import cifar10\n",
     "(x_train_org, y_train_org), (x_test_org, y_test_org) = cifar10.load_data()\n",
     "print(x_train_org.shape, x_test_org.shape)\n",
@@ -1871,7 +1873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
